--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
   <head>
     <meta http-equiv="refresh" content="0; URL=Odoo_Report.html" />
-    <title>Redirecting...</title>
+    <script>window.location.href = "Odoo_Report.html";</script>
   </head>
-  <body>
-    <p>Redirecting to <a href="Odoo_Report.html">Odoo_Report.html</a></p>
-  </body>
+  <body></body>
 </html>
