--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
                 
                 <meta name="viewport" content="initial-scale=1">
                 <title>Odoo Report</title>
+
+    <script>
+    const allowedKey = "onlyfrombarcode123"; // QR-only access
+    const url = new URL(window.location.href);
+    const accessKey = url.searchParams.get("key");
+
+    if (accessKey !== allowedKey) {
+      window.location.href = "403.html";
+    }
+  </script>
                 <link type="text/css" rel="stylesheet" href="./Odoo Report_files/web.report_assets_common.min.css" data-asset-bundle="web.report_assets_common" data-asset-version="3e80147">
                 <script type="text/javascript">
                     window.odoo = {};
@@ -11,15 +21,6 @@
                 </script>
                 <script type="text/javascript" src="./Odoo Report_files/web.assets_common.min.js.download" data-asset-bundle="web.assets_common" data-asset-version="f87aa4d"></script>
                 <script type="text/javascript" src="./Odoo Report_files/web.report_assets_common.min.js.download" data-asset-bundle="web.report_assets_common" data-asset-version="3e80147"></script>
-<script>
-  const allowedKey = "onlyfrombarcode123"; // your secret key from QR code
-  const url = new URL(window.location.href);
-  const accessKey = url.searchParams.get("key");
-
-  if (accessKey !== allowedKey) {
-    window.location.href = "403.html"; // show error if key not matched
-  }
-</script>
         
 
 </head>
