--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
                 <meta name="viewport" content="initial-scale=1">
                 <title>Odoo Report</title>
 
-    <script>
-    const allowedKey = "onlyfrombarcode123"; // QR-only access
-    const url = new URL(window.location.href);
-    const accessKey = url.searchParams.get("key");
+ <script>
+  const allowedUUID = "89bb94cb-3163-421c-a02d-185030203052";
+  const url = new URL(window.location.href);
+  const uuid = url.searchParams.get("uuid");
 
-    if (accessKey !== allowedKey) {
-      window.location.href = "403.html";
-    }
-  </script>
+  if (uuid !== allowedUUID) {
+    window.location.href = "403.html";
+  }
+</script>
+
                 <link type="text/css" rel="stylesheet" href="./Odoo Report_files/web.report_assets_common.min.css" data-asset-bundle="web.report_assets_common" data-asset-version="3e80147">
                 <script type="text/javascript">
                     window.odoo = {};
