--- a/New_Content.html
+++ b/New_Content.html
@@ -4,6 +4,17 @@
                 
                 <meta name="viewport" content="initial-scale=1">
                 <title>Odoo Report</title>
+
+  <script>
+  const allowedUUID = "newbarcode123"; // your new secret key for the new barcode
+  const url = new URL(window.location.href);
+  const uuid = url.searchParams.get("uuid");
+
+  if (uuid !== allowedUUID) {
+    window.location.href = "403.html"; // redirect to 403 if the key doesn't match
+  }
+</script>
+
                 <link type="text/css" rel="stylesheet" href="./Odoo Report3_files/web.report_assets_common.min.css" data-asset-bundle="web.report_assets_common" data-asset-version="3e80147">
                 <script type="text/javascript">
                     window.odoo = {};
